--- a/public/posts/api-platform-design.mdx
+++ b/public/posts/api-platform-design.mdx
@@ -4,7 +4,7 @@ Previously I completed this blog's SPA theme with some <a href='reactjs-codingke
 
 ### Time to Market
 
-Often the main high level goal for an organization is a fast and predictable time to market for end user functionality. Yet often in software there are hidden complexities that prevent that from being a reality. API development foundations with a clean separation of concerns can reduce application responsibilities to enable business focused development that aligns with this goal.
+Often the main high level goal for an organization is a fast and predictable time to market for end user functionality. Yet often in software there are hidden complexities that prevent that from being a reality. API development with a clean separation of concerns can get the foundations right and reduce work for developers.
 
 ### Productive API Development
 
