--- a/public/posts/web-architecture-goals.mdx
+++ b/public/posts/web-architecture-goals.mdx
@@ -4,7 +4,7 @@ The <a href='home.mdx'>Home Page</a> described OAuth in terms of overall goals f
 
 ### Time to Market
 
-Often the main high level goal for an organization is a fast and predictable time to market for end user functionality. Yet often in software there are hidden complexities that prevent that from being a reality. Web development foundations with a clean separation of concerns can reduce application responsibilities to enable business focused development that aligns with this goal.
+Often the main high level goal for an organization is a fast and predictable time to market for end user functionality. Yet often in software there are hidden complexities that prevent that from being a reality. Web development with a clean separation of concerns can get the foundations right and reduce work for developers.
 
 ### Best User Experience
 
