--- a/public/posts/cloud-hosting.mdx
+++ b/public/posts/cloud-hosting.mdx
@@ -4,7 +4,7 @@ Previously I completed this blog's mobile theme by explaining <a href='ios-code-
 
 ### Fast Time to Market
 
-Often the main high level goal for an organization is a fast and predictable time to market for end user functionality. Yet often in software there are hidden complexities that prevent that from being a reality. Solid cloud deployment patterns with a clean separation of concerns can reduce application responsibilities to enable business focused development that aligns with this goal.
+Often the main high level goal for an organization is a fast and predictable time to market for end user functionality. Yet often in software there are hidden complexities that prevent that from being a reality. Cloud deployment with a clean separation of concerns can get the foundations right and reduce work for developers.
 
 ### Immediate Infrastructure
 
