--- a/public/posts/native-architecture-goals.mdx
+++ b/public/posts/native-architecture-goals.mdx
@@ -4,7 +4,7 @@ Previously I completed the blog's API theme with some people focused <a href='ap
 
 ### Time to Market
 
-Often the main high level goal for an organization is a fast and predictable time to market for end user functionality. Yet often in software there are hidden complexities that prevent that from being a reality. Desktop and mobile development foundations with a clean separation of concerns can reduce application responsibilities to enable business focused development that aligns with this goal.
+Often the main high level goal for an organization is a fast and predictable time to market for end user functionality. Yet often in software there are hidden complexities that prevent that from being a reality. Desktop and mobile development with a clean separation of concerns can get the foundations right and reduce work for developers.
 
 ### Best User Experience
 
