--- a/public/posts/android-code-sample-overview.mdx
+++ b/public/posts/android-code-sample-overview.mdx
@@ -128,7 +128,7 @@ The app supports navigation via deep linking where a user can follow an *HTTPS A
 
 A deep link could point to an unauthorized or invalid resource, as demonstrated by the last two examples below:
 
-```http
+```markdown
 https://mobile.authsamples.com/finalmobileapp/deeplink
 https://mobile.authsamples.com/finalmobileapp/deeplink/companies/2
 https://mobile.authsamples.com/finalmobileapp/deeplink/companies/3
