--- a/public/posts/api-architecture-node.mdx
+++ b/public/posts/api-architecture-node.mdx
@@ -76,7 +76,7 @@ The Express HTTP server then listens on HTTPS port 446:
 
 You can then navigate to the following URL in a browser without any SSL trust warnings:
 
-```http
+```markdown
 https://api.authsamples-dev.com:446/investments/companies
 ```
 
