--- a/public/posts/basicspa-execution.mdx
+++ b/public/posts/basicspa-execution.mdx
@@ -165,7 +165,7 @@ To enable the SPA to successfully call APIs, this blog's early APIs implement [C
 
 You can click one of the *View Transactions* links to navigate to the SPA's second view. Alternatively, you can type the following format of URL into the browser's address bar:
 
-```http
+```markdown
 https://www.authsamples-dev.com/spa/#company=2
 ```
 
