--- a/public/posts/net-core-code-sample-overview.mdx
+++ b/public/posts/net-core-code-sample-overview.mdx
@@ -86,7 +86,7 @@ The .NET HTTP server then listens on HTTPS port 446:
 
 You can then navigate to the following URL in a browser without any SSL trust warnings:
 
-```http
+```markdown
 https://api.authsamples-dev.com:446/investments/companies
 ```
 
