--- a/public/posts/basicspa-codingkeypoints.mdx
+++ b/public/posts/basicspa-codingkeypoints.mdx
@@ -147,7 +147,7 @@ The SPA configuration contains the following values, to enable the SPA to connec
     "oauth": {
         "authority":        "https://cognito-idp.eu-west-2.amazonaws.com/eu-west-2_CuhLeqiE9",
         "clientId":         "hje94a2jj3lgkobkh57ikenhh",
-        "redirectUri":      "https://www.authsamples-dev.com/spa",
+        "redirectUri":      "https://www.authsamples-dev.com/spa/",
         "scope":            "openid profile"
     }
 }
