--- a/public/posts/basicspa-execution.mdx
+++ b/public/posts/basicspa-execution.mdx
@@ -30,7 +30,7 @@ Both the SPA and API use configuration files that highlight important OAuth sett
     "oauth": {
         "authority":        "https://cognito-idp.eu-west-2.amazonaws.com/eu-west-2_CuhLeqiE9",
         "clientId":         "hje94a2jj3lgkobkh57ikenhh",
-        "redirectUri":      "https://www.authsamples-dev.com/spa",
+        "redirectUri":      "https://www.authsamples-dev.com/spa/",
         "scope":            "openid profile"
     }
 }
