--- a/public/posts/improved-spa-code-sample-overview.mdx
+++ b/public/posts/improved-spa-code-sample-overview.mdx
@@ -52,7 +52,7 @@ The SPA now uses more complete OAuth settings, to request a custom *investments*
         "provider":               "cognito",
         "authority":              "https://cognito-idp.eu-west-2.amazonaws.com/eu-west-2_CuhLeqiE9",
         "clientId":               "hje94a2jj3lgkobkh57ikenhh",
-        "redirectUri":            "https://www.authsamples-dev.com/spa",
+        "redirectUri":            "https://www.authsamples-dev.com/spa/",
         "postLogoutRedirectUri":  "https://www.authsamples-dev.com/spa/loggedout",
         "scope":                  "openid profile email https://api.authsamples.com/api/investments",
         "customLogoutEndpoint":   "https://login.authsamples.com/logout"
