--- a/public/posts/updated-spa-coding-key-points.mdx
+++ b/public/posts/updated-spa-coding-key-points.mdx
@@ -201,7 +201,7 @@ For best reliability, you could also store a refresh token in local storage and 
         "provider":               "cognito",
         "authority":              "https://cognito-idp.eu-west-2.amazonaws.com/eu-west-2_CuhLeqiE9",
         "clientId":               "hje94a2jj3lgkobkh57ikenhh",
-        "redirectUri":            "https://www.authsamples-dev.com/spa",
+        "redirectUri":            "https://www.authsamples-dev.com/spa/",
         "postLogoutRedirectUri":  "https://www.authsamples-dev.com/spa/loggedout",
         "scope":                  "openid profile https://api.authsamples.com/investments",
         "customLogoutEndpoint":   "https://login.authsamples.com/logout"
