--- a/public/posts/web-technology-setup.mdx
+++ b/public/posts/web-technology-setup.mdx
@@ -618,9 +618,9 @@ Stack traces are most useful when there is a bug in the SPA's code that you cann
 
 ### Web Production Behaviors
 
-Once you have a productive web pipeline, you are well placed to productionize and apply finishing touches to the web technology. The following blog posts explore this blog's finishing touches, all of which build upon the web technology setup:
+Once you have a productive web pipeline, you are well placed to productionize and apply finishing touches to the web technology. The following blog posts explore this blog's finishing touches for web applications. None of these steps change the web technology setup:
 
-- The <a href='spa-back-end-for-front-end.mdx'>Backend for Frontend Design</a> explains security hardening for SPAs.
+- The <a href='spa-back-end-for-front-end.mdx'>Backend for Frontend Design</a> explains the use of secure cookies to transport access tokens.
 - The <a href='final-spa-overview.mdx'>Final SPA Overview</a> explains an update to the React framework.
 - The <a href='api-journey-client-side.mdx'>API Journey Client Side</a> explains more about API sessions in clients.
 - The <a href='cdn-static-content-delivery.mdx'>Web Content Delivery</a> explains modern web deployments with optimal global performance.
