--- a/public/posts/oauth-infrastructure-setup.mdx
+++ b/public/posts/oauth-infrastructure-setup.mdx
@@ -135,7 +135,7 @@ The *authority* URL is typically the base URL of the authorization server. You c
     "oauth": {
         "authority":        "https://cognito-idp.eu-west-2.amazonaws.com/eu-west-2_CuhLeqiE9",
         "clientId":         "62raqvncbki418n3ckl59uf0f4",
-        "redirectUri":      "https://www.authsamples-dev.com/spa",
+        "redirectUri":      "https://www.authsamples-dev.com/spa/",
         "scope":            "openid profile"
     }
 }
