--- a/public/posts/managed-authorization-server-setup.mdx
+++ b/public/posts/managed-authorization-server-setup.mdx
@@ -4,7 +4,7 @@ Previously I explained this blog's <a href='cloud-domain-setup.mdx'>Cloud Domain
 
 ### Create the Authorization Server
 
-I created a *User Pool* with the *Plus* plan and configured the newer *Managed Login* option. In this blog I do not use any advanced authorization server features. My only motivation is to use correct standards-based options like customizable access tokens, single-use refresh tokens and correct use of the OpenID Connect *prompt* parameter.
+I created a *User Pool* with the *Plus* plan and configured the newer *Managed Login* option. In this blog I do not use any advanced authorization server features. My only motivation is to use correct standards-based options like customisable access tokens, single-use refresh tokens and correct use of the OpenID Connect *prompt* parameter.
 
 ![user pool](../images/600/user-pool.jpg)
 
@@ -79,7 +79,7 @@ Claims issued to access tokens depend on the client's scope, to enable different
 
 ### Where Are We?
 
-I explained the infrastructure configuration of a low maintenance cloud authorization server and activated token customization. This provides the setup I use throughout the blog for standards based OAuth development.
+I explained the infrastructure configuration of a low maintenance cloud authorization server and activated token customisation. This provides the setup I use throughout the blog for standards based OAuth development.
 
 ### Next
 
