--- a/public/posts/web-technology-setup.mdx
+++ b/public/posts/web-technology-setup.mdx
@@ -595,9 +595,9 @@ public static getErrorStack(error: UIError): ErrorLine | null {
 }
 ```
 
-In debug builds I intentionally render SPA stack trace data in a raw format. In production apps, I could use a *Send Home* feature to receive this data:
+In debug builds of this blog's frontend applications I intentionally render SPA stack trace data in a raw format. In production apps, I could use a *Send Home* feature to receive this data:
 
-![exception](../images/90/exception.jpg)
+![exception](../images/90/frontend-exception-display.jpg)
 
 I would save a backup of source map files for each application release. When a user experiences an error you can use tools like the [Online Source Mapper](https://sourcemaps.info) to find the original source location of an error. To do so, paste stack trace data into the left hand pane and the source map data into the small edit box:
 
@@ -622,7 +622,7 @@ Once you have a productive web pipeline, you are well placed to productionize an
 
 - The <a href='spa-back-end-for-front-end.mdx'>Backend for Frontend Design</a> explains the use of secure cookies to transport access tokens.
 - The <a href='final-spa-overview.mdx'>Final SPA Overview</a> explains an update to the React framework.
-- The <a href='api-journey-client-side.mdx'>API Journey Client Side</a> explains more about API sessions in clients.
+- The <a href='api-journey-client-side.mdx'>API Journey Client Side</a> explains how web clients should handle API security challenges.
 - The <a href='cdn-static-content-delivery.mdx'>Web Content Delivery</a> explains modern web deployments with optimal global performance.
 
 Of course, in a real SPA you are likely to have additional requirements, like greater use of images and CSS. You may also prefer to do a little more work in the web host. You should be able to adapt this blog's web technology setup to implement such requirements.
