--- a/public/posts/how-to-run-the-react-js-spa.mdx
+++ b/public/posts/how-to-run-the-react-js-spa.mdx
@@ -85,7 +85,7 @@ Open a terminal and run the following command from the root folder, to build and
 ./start.sh
 ```
 
-The [Webpack development server](https://webpack.js.org/configuration/dev-server/) serves static content in watch mode. The default browser then opens at *https://www.authsamples-dev.com*.
+The Webpack development server serves HTML, CSS and JavaScript static content resources and opens the default browser at *https://www.authsamples-dev.com*.
 
 ![spa build](../images/230/spa-build.jpg?v=20241222)
 
