--- a/public/posts/final-spa-overview.mdx
+++ b/public/posts/final-spa-overview.mdx
@@ -10,7 +10,7 @@ The final SPA improves on the previous <a href='improved-spa-code-sample-overvie
 | ----------- | ----------- |
 | Best Browser Security | The SPA calls APIs using the strongest *HttpOnly SameSite=strict* cookies, with no tokens in the browser. |
 | Globally Equal Performance | Deploy the SPA to a content delivery network, so that web latency is roughly the same at any global location. |
-| Pure SPA Development | Web developers work productively on modern frontends, with small code bases, usability control and no backend plumbing. |
+| Pure SPA Development | Web developers use production security but work only on modern frontends, with small code bases and usability control. |
 
 ### Cloud Hosting
 
