--- a/public/posts/basicspa-overview.mdx
+++ b/public/posts/basicspa-overview.mdx
@@ -18,7 +18,7 @@ The overall goal is a productive technical setup that would help to enable a fas
 
 ### SPAs in 2021
 
-This sample uses the traditional SPA solution, with a JavaScript OpenID Connect implementation. It is now considered more secure for your production apps to instead use a <a href='spa-back-end-for-front-end.mdx'>Backend for Frontend</a> approach. Before integrating a BFF you should understand the traditional SPA flow and the web development and deployment benefits it enables.
+This example SPA uses the traditional SPA solution, with a JavaScript OpenID Connect implementation. It is now considered more secure for your production apps to instead use a <a href='spa-back-end-for-front-end.mdx'>Backend for Frontend</a> approach. Before this blog integrates a BFF it explains the traditional SPA flow and the web development and deployment benefits it enables.
 
 ### Code Download
 
@@ -68,7 +68,7 @@ In OAuth, you should separate web and API hosting, so that API developers deal w
 | API | https://api.authsamples.com |
 | Web Static Content | https://www.authsamples.com |
 
-On a development computer I almost never develop with URLs like *http://localhost:3000*. Instead, I use real-world domain names and HTTPS for the hosting of APIs and web static content. I use a *-dev* suffix for URLs to represent the local environment.
+On a development computer I almost never use URLs like *http://localhost:3000* for secure application development. Instead, I use real-world domain names and HTTPS for the hosting of APIs and web static content. I use a *-dev* suffix for URLs to represent the local environment.
 
 | Component | Base URL |
 | --------- | -------- |
