--- a/public/posts/effective-api-logging.mdx
+++ b/public/posts/effective-api-logging.mdx
@@ -107,11 +107,7 @@ For each API request I output a single request log entry and a single audit log 
   "sessionId": "a601559a-0c90-c899-8099-8a9f63a30be8",
   "isAuthenticated": true,
   "isAuthorized": true,
-  "scope": [
-    "openid",
-    "profile",
-    "investments"
-  ],
+  "scope": "openid profile investments",
   "claims": {
     "managerId": "10345",
     "role": "user"
