--- a/public/posts/final-spa-overview.mdx
+++ b/public/posts/final-spa-overview.mdx
@@ -125,7 +125,7 @@ The time to first render in a secured web application is not immediate and requi
 | ---- | ----------- |
 | Unauthenticated Access | The time to download HTML resources and run code to detect the user's authentication status. |
 | OAuth Login | The time to redirect to the authorization server and present login screens, then return to the SPA. |
-| Secure SPA Access | The application reload, followed by API requests to get secured data specific to the user. |
+| Secure SPA Access | The application reload, followed by API requests to get sensitive data specific to the user. |
 
 The final SPA uses the following mainstream techniques to ensure good performance:
 
