--- a/public/posts/improved-spa-code-sample-overview.mdx
+++ b/public/posts/improved-spa-code-sample-overview.mdx
@@ -17,9 +17,7 @@ The updated SPA and API code sample has the following additional behaviours, to 
 
 ### SPAs in 2021
 
-This sample uses the traditional SPA solution, with OpenID Connect implemented solely in JavaScript. In 2021 the best practice is to upgrade to a <a href='spa-back-end-for-front-end.mdx'>Backend for Frontend</a> approach.
-
-The traditional SPA flow remains useful to represent a pure SPA architecture and to learn about OAuth techniques. This blog's <a href='final-spa-overview.mdx'>Final SPA</a> provides a BFF based solution, but requires a more complex flow.
+This example SPA uses the traditional SPA solution, with a JavaScript OpenID Connect implementation. It is now considered more secure for your production apps to instead use a <a href='spa-back-end-for-front-end.mdx'>Backend for Frontend</a> approach. Before this blog integrates a BFF it explains the traditional SPA flow and the web development and deployment benefits it enables.
 
 ### Step 1. Code Download
 
