--- a/public/posts/api-journey-server-side.mdx
+++ b/public/posts/api-journey-server-side.mdx
@@ -327,7 +327,7 @@ When there is a server error I write a log entry that includes a unique *Error I
 
 The logs enable <a href='api-technical-support-analysis.mdx'>people-focused technical support queries</a> to measure errors or slowness. For example, you can produce a breakdown of errors by type and frequency for a time period. You can then iron out any reliability issues as part of your quality processes.
 
-### APIs Audit Requests for Secured Data
+### APIs Audit Requests for Sensitive Data
 
 Once you take control over API logging, it should be straightforward to implement auditing of API requests. This is just a different type of log, which records identities and the level of access. In particular, it outputs the scopes and the most important business claims. This blog's final APIs write audit logs with the following fields:
 
