--- a/public/posts/spa-back-end-for-front-end.mdx
+++ b/public/posts/spa-back-end-for-front-end.mdx
@@ -37,7 +37,7 @@ There are other types of cookie issuing solutions for web applications, but they
 
 - **Reverse Proxy**. Development setups and deployments use a reverse proxy that implements security. When requests for HTML files do not have a session cookie the browser is abrubtly redirected. In some implementations, fetch requests may also experience abrupt redirects, or APIs may not receive access tokens. You therefore lose technical control.
 
-- **Website**. Developers run a complex local setup where their web host comes into contact with secured data and typically uses a website cookie framework. The web host may use server-side rendering to return HTML and data together. It requires a runtime and other server dependencies that limits developer setups and deployments, and the frontend loses technical control.
+- **Website**. Developers run a complex local setup where their web host comes into contact with sensitive API data and typically uses a website cookie framework. The web host may use server-side rendering to return HTML and data together. It requires a runtime and other server dependencies that limits developer setups and deployments, and the frontend loses technical control.
 
 Instead, my BFF uses a separation of concerns to meet my requirements, where both the SPA and APIs retain full technical control. The frontend can reliably handle API 401 responses and use short-lived cookies, even when 401s occur for concurrent API requests.
 
